--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "dotenv-webpack": "^1.5.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
