--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-polyfill": "^6.26.0",
     "dotenv-webpack": "^1.5.4",
     "vue": "^2.5.2",
+    "vue-head": "^2.0.11",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.2"
   },
