--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue2-animate": "^1.0.4",
     "vuetify": "^0.17.2",
     "vuex": "^3.0.1",
+    "vuex-pathify": "^1.1.0",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
