--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "dotenv-webpack": "^1.5.7",
+    "lodash": "^4.17.10",
     "vue": "^2.5.2",
     "vue-analytics": "^5.12.3",
     "vue-head": "^2.0.11",
