--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.1.3",
     "dotenv-webpack": "^1.5.7",
     "lodash": "^4.17.10",
     "vue": "^2.5.2",
