--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.6.5",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-analytics": "^5.12.3",
     "vue-head": "^2.0.11",
