--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "directus-client",
   "version": "1.0.0",
+  "private": true,
   "description": "Client for Headless CMS Directus",
   "author": "Edward Ganuelas <epganuelas@gmail.com>",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@directus/sdk-js": "^6.0.0-alpha.5",
     "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.3",
-    "core-js": "^2.6.5",
+    "core-js": "^3.3.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
@@ -29,10 +29,10 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.0",
-    "@vue/cli-plugin-eslint": "^3.12.0",
-    "@vue/cli-plugin-unit-mocha": "^3.12.0",
-    "@vue/cli-service": "^3.12.0",
+    "@vue/cli-plugin-babel": "^4.0.5",
+    "@vue/cli-plugin-eslint": "^4.0.5",
+    "@vue/cli-plugin-unit-mocha": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
